Update Semaphore configuration

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -12,6 +12,7 @@ blocks:
           commands:
             - checkout
             - make app
+            - artifact push workflow app
   - name: Tests
     task:
       prologue:
@@ -20,6 +21,7 @@ blocks:
       jobs:
         - name: Run app
           commands:
+            - artifact pull workflow app
             - chmod +x app
             - ./app
         - name: Lint
