Update Semaphore configuration

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -23,6 +23,7 @@ blocks:
           commands:
             - artifact pull workflow app
             - chmod +x app
+            - '# test'
             - ./app
         - name: Lint
           commands:
